src/css/artist-details-modal/artist-modal-about.css
.about-artist__title {
  font-family: 'Epilogue Bold', sans-serif;
  margin-bottom: 16px;
  font-size: 20px;
  line-height: 1.3;
  letter-spacing: -0.01em;
  text-align: center;
  color: var(--color-white);
}

.about-artist__content {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 32px;
}

.about-artist__image {
  border-radius: 16px;
  min-width: 272px;
  height: 167px;
  object-fit: cover;
  object-position: top center;
}

.about-artist__info-list {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.about-artist__info-item {
  font-size: 18px;
  line-height: 1.5;
  color: var(--color-white);
  width: 100%;
}

.about-artist__info-item-title {
  font-family: 'IBM Plex Sans Semi-bold';
}

.about-artist__info-item-text {
  font-family: 'IBM Plex Sans Regular', sans-serif;
}

.about-artist__info-item--bio {
  max-height: 324px;
  overflow-y: auto;
  scrollbar-width: thin;
  scrollbar-color: rgba(118, 65, 145, 0.5) transparent;
}

.about-artist__info-item--bio::-webkit-scrollbar {
  width: 3%;
}

.about-artist__info-item--bio::-webkit-scrollbar-track {
  background: transparent;
}

.about-artist__info-item--bio::-webkit-scrollbar-thumb {
  background-color: rgba(118, 65, 145, 0.4);
  border-radius: 3px;
}

.about-artist__info-item--bio::-webkit-scrollbar-thumb:hover {
  background-color: rgba(118, 65, 145, 0.8);
}

.about-artist__music-genres {
  display: flex;
  flex-wrap: wrap;
  gap: 16px;
}

.about-artist__music-genre {
  padding: 4px 10px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: 'IBM Plex Sans Semi-bold', sans-serif;
  font-size: 16px;
  line-height: 1.5;
  color: var(--color-white);
  border: 1px solid var(--opacity-white-20);
  border-radius: 6px;
  max-height: 32px;
  background-color: var(--opacity-transparent);
}

@media only screen and (min-width: 768px) {
  .about-artist__title {
    margin-bottom: 48px;
    font-size: 32px;
  }

  .about-artist__image {
    min-width: 654px;
    height: 402px;
  }

  .about-artist__info-list {
    flex-direction: row;
    flex-wrap: wrap;
    gap: 24px;
  }

  .about-artist__info-item:nth-child(odd):not(.about-artist__info-item--bio) {
    max-width: 146px;
    flex: 0 0 auto;
  }

  .about-artist__info-item:nth-child(even):not(.about-artist__info-item--bio) {
    max-width: 50%;
    flex: 0 0 auto;
  }

  .about-artist__info-item--bio {
    flex-grow: 2;
    max-height: 135px;
  }
}

@media only screen and (min-width: 1440px) {
  .about-artist__content {
    flex-direction: row;
    align-items: flex-start;
    justify-content: space-between;
  }

  .about-artist__image {
    min-width: 576px;
    height: 354px;
  }

  .about-artist__info-list {
    gap: 24px;
  }

  .about-artist__info-item:nth-child(odd):not(.about-artist__info-item--bio) {
    max-width: 146px;
  }

  .about-artist__info-item:nth-child(even):not(.about-artist__info-item--bio) {
    max-width: 50%;
  }

  .about-artist__info-item--bio {
    max-height: 162px;
  }
}

@media only screen and (min-width: 768px) and (max-width: 1439px) {
  .artist-modal__close-btn {
    top: 16px;
    right: 47px;
  }
}

